base/heco-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heco-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: heco-app
  type: NodePort
  ports:
    - port: 80 # 서비스가 생성할 포트  
      targetPort: 8000 # 서비스가 접근할 pod의 포트
      protocol: TCP
