base/heco-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "heco-ingress"
    namespace: default
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/group.name: eks-demo-group
      alb.ingress.kubernetes.io/group.order: '1'
    ## Traffic Listening   
      ## ALB가 수신 대기하는 데 사용한 포트를 지정합니다.
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
      ## SSLRedirect를 활성화하고 리디렉션할 SSL 포트를 지정합니다.단일 Ingress에 정의되면 IngressGroup 내의 모든 Ingress에 영향을 미칩니다.
      alb.ingress.kubernetes.io/ssl-redirect: '443'
      ## ALB 의 IP 주소 유형 을 지정합니다 .
      ## AWS Certificate Manager 에서 관리하는 하나 이상의 인증서의 ARN을 지정합니다.
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:940168446867:certificate/deacb09f-c7c0-4392-9be8-d65a553f63d8
spec:
    rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "heco-app"
                port:
                  number: 80
